--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -26,13 +26,13 @@
     "main": false,
     "no_rc": false,
     "api": false,
-    "javascript": "importmap",
+    "javascript": "esbuild",
     "skip_bundle": false,
     "note": "",
     "test": "rspec",
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_annotate": true,
+    "add_annotate": false,
     "add_avo": false,
     "add_bcrypt": false,
     "add_brakeman": false,
@@ -42,8 +42,8 @@
     "add_devise": false,
     "add_devise_masquerade": false,
     "add_dotenv": false,
-    "add_factory_bot_rails": true,
-    "add_faker": true,
+    "add_factory_bot_rails": false,
+    "add_faker": false,
     "add_friendly_id": false,
     "add_groupdate": false,
     "add_hexapdf": false,
@@ -52,7 +52,7 @@
     "add_image_processing": false,
     "add_kaminari": false,
     "add_lograge": false,
-    "add_minimal_css": true,
+    "add_minimal_css": false,
     "minimal_css_library": "water.css",
     "add_mini_magick": false,
     "add_motor_admin": false,
@@ -64,9 +64,11 @@
     "add_redcarpet": false,
     "add_rolify": false,
     "add_scenic": false,
-    "add_rspec": false,
+    "add_rspec": true,
     "add_rubocop": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/factory_bot/_.rb"
+    "add_view_component": true,
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/view_component/_.rb",
+    "css": "tailwind"
   }
 }
