before machine backup push

--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -48,6 +48,7 @@
     "add_brakeman",
     "add_browser",
     "add_bundler_audit",
+    "add_capybara",
     "add_chartkick",
     "add_devise",
     "add_devise_masquerade",
@@ -412,6 +413,13 @@
     {
       "name": "add_bundler_audit",
       "description": "Indicates when to generate add bundler audit",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_capybara",
+      "description": "Indicates when to generate add capybara",
       "type": "boolean",
       "default": false,
       "required": false
